New changes in Html & Css

--- a/index1.html
+++ b/index1.html
@@ -1,2 +1,13 @@
 <p> Hi this code is for Local Repo</p>
 <p>This is a New Branch (Branch Master listing)</p>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test Page</title>
+</head>
+<body>
+    <h1>Hello, this is a test!</h1>
+    <p>Testing HTML code.</p>
+</body>
+</html>
