Untrack test.log and add to .gitignore

--- a/index1.html
+++ b/index1.html
@@ -4,12 +4,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test Page</title>
+    <title>Test Module</title>
 </head>
 <body>
     <h1>Hello, this is a test!</h1>
-    <p>Testing HTML code.</p>
+    <p>Testing Branch Master</p>
 </body>
 </html>
-<p>This is a New Branch (Module listing)</p>
+<p>CRM Module</p>
 
